# recipe

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: users.py
app/core/: config.py
app/db/: base.py  base_class.py
app/db/migrations/: env.py
app/db/tables/: ingredients.py  measurements.py  nutrition.py  recipes.py  users.py
app/models/schema/: users.py
backend/: Dockerfile  backend.dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/dependencies/: db.py  functions.py
backend/app/api/routes/: api.py  login.py  recipes.py  users.py
backend/app/core/: auth.py  config.py  security.py
backend/app/crud/: base.py  recipe.py  user.py
backend/app/db/: __init__.py  base.py  base_class.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/old_tables/: ingredients.py  nutrition.py  users.py
backend/app/db/tables/: measurements.py  recipes.py
backend/app/schemas/: recipe.py  users.py
frontend/: Dockerfile  frontend.dockerfile  vue.config.js
frontend/src/: axios-api.ts
frontend/src/components/: Footer.vue  Hero.vue  navbar.vue  recipecard.vue  recipecardsmall.vue
frontend/src/views/: Home.vue  Login.vue  Logout.vue  RecipeSearch.vue  Signup.vue
kubernetes/helm/templates/: ingress.yaml
